# arm_avoidance

./: .gitignore  Dockerfile  README.md  RUN_GUIDE.md  check_share_dir.py  collision_viewer.html  debug_stl.py  docker-compose.yaml  frames_2026-04-28_19.51.49.gv  log.txt  robot_viewer_runbook.md  test_joint_state_publisher.py  test_tf_publisher.py  visualize_collision.py
FuzzyClassifier/: CMakeLists.txt  README.md  package.xml
FuzzyClassifier/config/: relabel.yaml
FuzzyClassifier/launch/: cluster_relabel.launch.py  cluster_summary.launch.py
FuzzyClassifier/src/: cluster_relabel_node.cpp  cluster_summary_node.cpp
ais_gng_cpu/ais_gng/: CMakeLists.txt  package.xml
ais_gng_cpu/ais_gng/launch/: ais_gng.launch.py  camera_depth_points.launch.py  fixed_type_avia.launch.py  fixed_type_mid360.launch.py  mobile_type.launch.py  rviz.launch.py  sampling.launch.py
ais_gng_cpu/ais_gng/src/: ais_gng.cpp  cluster_classification.cpp  cluster_summary_node.cpp  downsampling.cpp  visualizar.cpp  visualize_filter.cpp
ais_gng_cpu/gng_classification/: CMakeLists.txt  README.md  package.xml  requirements.txt
ais_gng_cpu/gng_classification/gng_classification/: import_module.py
ais_gng_cpu/gng_classification/model/: NN_car.pt  NN_human.pt
ais_gng_cpu/gng_classification/scripts/: nn_learning.py  sampling_dataset.py
ais_gng_cpu/gng_cpu/: CMakeLists.txt  gng_cpu.v  package.xml
ais_gng_cpu/gng_cpu/src/: api.cpp
fuzz_arm/: CMakeLists copy.txt  CMakeLists.txt  HARDWARE_UDP_GUIDE.md  OFFLINE_TRAINER_GUIDE.md  README.md  RECONSTRUCT_VLUT.md  gng_offline.cfg  gng_offlinetmp.cfg  gng_online.cfg  topoarm.urdf
fuzz_arm/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
fuzz_arm/log/: latest_build
fuzz_arm/src/: CMakeLists.txt  offline_gng_spatial_analyzer.cpp
fuzz_arm/src/collision/: CMakeLists.txt
fuzz_arm/src/common/: CMakeLists.txt
fuzz_arm/src/control/: CMakeLists.txt
fuzz_arm/src/simulation/: CMakeLists.txt
fuzz_arm/src/spatial/: CMakeLists.txt
fuzz_arm/src/src/: inspect_gng_data.cpp  offline_gng_main2.cpp  offline_gng_main3.cpp  offline_gng_main4_env.cpp  offline_gng_main5_clean.cpp  offline_gng_main6_island_pruning.cpp  offline_gng_main_integrated.cpp  offline_gng_spatial_analyzer.cpp  offline_gng_status_updater.cpp
fuzz_arm/src/status/: CMakeLists.txt
fuzz_arm/src/visualization/: CMakeLists.txt
fuzz_arm/topoarm_description/urdf/: topoarm.urdf.xacro
fuzz_vis_ws/src/fuzz_gng_result_player/: CMakeLists.txt  README.md  package.xml
fuzzbot_gng/fuzzbot/fuzzbot/: CMakeLists.txt  package.xml
fuzzbot_gng/fuzzbot/fuzzbot_description/: CMakeLists.txt  package.xml
fuzzbot_gng/fuzzbot/fuzzbot_hardware/: CMakeLists.txt  package.xml
fuzzbot_gng/fuzzbot/fuzzbot_teleop/: CMakeLists.txt  package.xml
fuzzbot_gng/fuzzbot/pantilt_transform/: CMakeLists.txt  package.xml
fuzzy_voxel_grid/: CMakeLists.txt  package.xml
fuzzy_voxel_grid/config/: voxel_grid.yaml
fuzzy_voxel_grid/include/fuzzy_voxel_grid/: topo_visualizar.hpp  voxel_grid_node.hpp
fuzzy_voxel_grid/launch/: voxel_grid.launch.py
fuzzy_voxel_grid/src/: main.cpp  topo_visualizar.cpp  topological_node_marker_node.cpp  voxel_grid_node.cpp
gng_vlut_system/: .gitignore  CMakeLists.txt  OFFLINE_GUIDE.md  README.md  ROS2_GUIDE.md  config.txt  gng_offline.cfg  manual_udp_controller.py  package.xml  test_udp_status_dummy.py
gng_vlut_system/config/: gng_safety_params.yaml  topoarm_bridge.yaml
gng_vlut_system/config/rviz/: gng_safety.rviz
gng_vlut_system/launch/: gng_viewer_bridge.launch.py  gng_vlut_monitor.launch.py  gng_vlut_runtime.launch.py  offline_gng_main5_clean.launch.py  offline_gng_main6_island_pruning.launch.py  offline_gng_status_updater.launch.py  offline_urdf_trainer.launch.py  robot_bridge.launch.py  robot_gazebo_sim.launch.py  robot_gazebo_spawn.launch.py  robot_model_spawner.launch.py  robot_spawn.launch.py  self_recognition_viz.launch.py  spawn_topoarm_gazebo.launch.py  topoarm_hardware.launch.py  topoarm_runtime.launch.py  topoarm_viewer_bridge.launch.py  topofuzzy_bridge.launch.py  udp_joint_state_player.launch.py  viewer_stream_bridge.launch.py  visualize_robot_rviz.launch.py  visualize_topoarm_ros2.launch.py  visualize_topoarm_rviz.launch.py
gng_vlut_system/scripts/: analyze_experiment_log.py  analyze_performance.py  plot_gng_edge_dist.py  plot_gng_stats.py  record_joint_angles.py  visualize_joint_angles.py  visualize_manipulability.py  wave_joint_states.py
gng_vlut_system/src/: CMakeLists.txt  inspect_gng_data.cpp  offline_gng_main2.cpp  offline_gng_main3.cpp  offline_gng_main4_env.cpp  offline_gng_main5_clean.cpp  offline_gng_main6_island_pruning.cpp  offline_gng_main_integrated.cpp  offline_gng_spatial_analyzer.cpp  offline_gng_status_updater.cpp  offline_urdf_trainer.cpp  offline_vlut_builder.cpp
gng_vlut_system/src/bridge/: CMakeLists.txt  joint_state_mux_node.cpp  robot_arm_bridge_node.cpp  robot_bridge_node.cpp  robot_viewer_bridge_node.cpp  robot_viewer_bridge_node_main.cpp  topoarm_joint_state_player.cpp  topoarm_udp_bridge.cpp  topofuzzy_bridge_node.cpp
gng_vlut_system/src/collision/: CMakeLists.txt  collision_exclusion_setup.hpp  composite_collision_checker.hpp  geometric_self_collision_checker.cpp  geometric_self_collision_checker.hpp  point_cloud_collision_checker.hpp  voxel_grid.cpp  voxel_grid.hpp
gng_vlut_system/src/common/: CMakeLists.txt  geometry_utils.hpp  resource_utils.hpp  voxel_utils.hpp
gng_vlut_system/src/core_safety/: CMakeLists.txt
gng_vlut_system/src/description/: CMakeLists.txt  geometry_management.cpp  geometry_management.hpp  kinematic_adapter.cpp  kinematic_adapter.hpp  robot_dynamics.hpp  stl_loader.cpp  urdf_loader.cpp  urdf_loader.hpp
gng_vlut_system/src/offline_tools/: inspect_gng_data.cpp  offline_gng_main5_clean.cpp  (+3 more)
gng_vlut_system/urdf/: mycobot_mesh.urdf  temp_robot.urdf  topoarm_mesh.urdf
pointcloud_transformer/: package.xml  setup.cfg  setup.py
pointcloud_transformer/launch/: pointcloud_transformer.launch.py
pointcloud_transformer/pointcloud_transformer/: gng_transformer_node.py  transformer_node.py
(+481 files in other folders)
