<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gng_classification</name>
  <version>1.0.0</version>
  <description>gng_classification</description>
  <maintainer email="nagashima@fuzzrobo.com">Keisuke Nagashima</maintainer>
  <license>FuzzRobo</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>ais_gng_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>