<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gng_cpu</name>
  <version>0.0.0</version>
  <description>gng_cpu</description>
  <maintainer email="nagashima@fuzzrobo.com">Keisuke Nagashima</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>openssl</depend>
  <depend>ykpiv</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>